Fix banner image container size and align to the right

--- a/client/src/customer/Pages/Home.css
+++ b/client/src/customer/Pages/Home.css
@@ -121,14 +121,15 @@ h1 {
 }
 
 .banner-image{
-    width: 50%;
+    width: 40%;
+    height: 300px;
     background-color: #000;
     border-radius: 10px;
     display: flex;
     position : right;
 }
 .banner-image img {
-    max-width: 100%; 
+    max-width: 60%; 
     height: 300px;
 }
 
